fixed z-index for firefox

--- a/keys.css
+++ b/keys.css
@@ -43,6 +43,7 @@ kbd.eric-btn-dark {
 .LB-overlay-link-hint {
 	position:absolute;
 	top:50%;
-	transform:translateY(-50%)
+	transform:translateY(-50%);
+	z-index:10;
 	/*Move the center of the hint to the center of the parent's height by first placing the top of the hint there and then moving it by 50% of the hint upwards*/
 }
